--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,8 @@ img {
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
+input[type="radio"].visually-hidden,
+input[type="text"].visually-hidden {
   position: absolute;
 
   width: 1px;
@@ -782,7 +783,7 @@ input[type="radio"].visually-hidden {
 /* Фильтр каталога */
 
 .filter h2 {
-  margin-bottom: 209px;
+  margin-bottom: 69px;
 }
 
 .filter-form {
@@ -822,6 +823,76 @@ input[type="radio"].visually-hidden {
   letter-spacing: 0.18px;
   font-weight: 800;
   color: #000000;
+}
+
+.range-filter {
+  position:relative;
+  width: 201px;
+  margin-bottom: 4px;
+}
+
+.range-controls {
+  height: 34px;
+  padding-top: 35px;
+  padding-left: 5px;
+}
+
+.range-controls .scale {
+  height: 2px;
+
+  background-color: #dbdbdb;
+}
+
+.range-controls .bar {
+  width: 110px;
+  height: 2px;
+
+  background-color: #91c92f;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 25px;
+  left: 0;
+
+  width: 4px;
+  height: 4px;
+  padding: 0;
+
+  border: 8px solid #ffffff;
+  background-color: #ababab;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: -6px;
+}
+
+.range-controls .toggle-max {
+  left: 107px;
+}
+
+.min-price,
+.max-price {
+  position:absolute;
+  top: 46px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.18px;
+  font-weight: 300;
+  color: rgba(0, 0, 0, 0.2);
+}
+
+.min-price {
+  left: -1px;
+}
+
+.max-price {
+  left: 89px;
 }
 
 .filter-form ul {
@@ -1577,11 +1648,11 @@ body > * > * > * > * > * {
 }
 
 body > * > * > * > * > * > * {
-  background: rgba(255, 0, 0, 0.5);
+
 }
 
 body > * > * > * > * > * > * > * {
-  background: rgba(0, 255, 0, 0.5);
+
 }
 
 body > * > * > * > * > * > * > * > * {
@@ -1597,9 +1668,9 @@ body > * > * > * > * > * > * > * > * > * > * {
 }
 
 body > * > * > * > * > * > * > * > * > * > * > * {
-
+  background: rgba(255, 0, 0, 0.5);
 }
 
 body > * > * > * > * > * > * > * > * > * > * > * > * {
-
+  background: rgba(0, 255, 0, 0.5);
 } */
