--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ input[type="text"].visually-hidden {
   padding-bottom: 50px;
   padding-left: 59px;
 
-  background-color: rgba(240, 197, 46, 0.5);
+  background-color: #f7e296;
 }
 
 .index-page .layout-header::after {
@@ -248,7 +248,6 @@ input[type="text"].visually-hidden {
   background-color: transparent;
   border: none;
   border-bottom: 2px solid transparent;
-  /* border-bottom: 2px solid #000000; */
 }
 
 .search-field:focus {
@@ -470,7 +469,7 @@ input[type="text"].visually-hidden {
   top: 24px;
 
   display: none;
-  width: 560px;
+  height: 110px;
   margin: 0;
   padding: 0;
   padding-top: 20px;
@@ -496,6 +495,7 @@ input[type="text"].visually-hidden {
   z-index: 10;
 
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
 }
 
@@ -506,25 +506,17 @@ input[type="text"].visually-hidden {
   line-height: 36px;
 }
 
-.catalog-subcategories li:first-child a {
-  min-width: 239px;
+.catalog-subcategories li:nth-child(-n+3) {
+  width: 239px;
 }
 
-.catalog-subcategories li:nth-child(2) a {
-  min-width: 200px;
+.catalog-subcategories li:nth-child(4) {
+  width: 200px;
 }
 
-.catalog-subcategories li:nth-child(4) a {
-  min-width: 239px;
-}
-
-.catalog-subcategories li:nth-child(5) a {
-  min-width: 200px;
-  margin-right: 111px;
-}
-
-.catalog-subcategories li:nth-child(6) a {
-  min-width: 239px;
+.catalog-subcategories li:nth-child(5) {
+  width: 200px;
+  margin-bottom: 30px;
 }
 
 .site-header-site-navigation .delivery-link {
@@ -552,6 +544,118 @@ input[type="text"].visually-hidden {
 .layout-index-columns .right-column {
   display: flex;
   width: 560px;
+}
+
+/* Секция представленные виды девайсов */
+
+.types-of-devices {
+  margin-bottom: 80px;
+}
+
+.types-of-devices-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.types-of-devices-list a {
+  position: relative;
+
+  display: block;
+  width: 160px;
+  padding-top: 193px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0.18px;
+  font-weight: 800;
+  color: #000000;
+
+  background-image: linear-gradient(to bottom, #f7e296 160px, transparent 160px);
+}
+
+.types-of-devices-list a::before {
+  content: "";
+
+  position: absolute;
+}
+
+.virtual-reality a::before {
+  top: 52px;
+  left: 31px;
+
+  width: 97px;
+  height: 55px;
+
+  background-image: url(../img/virtual-reality.svg);
+}
+
+.selfie a::before {
+  top: 41px;
+  left: 38px;
+
+  width: 86px;
+  height: 117px;
+
+  background-image: url(../img/selfie.svg);
+}
+
+.camera a::before {
+  top: 38px;
+  left: 49px;
+
+  width: 71px;
+  height: 87px;
+
+  background-image: url(../img/camera.svg);
+}
+
+.fitness a::before {
+  top: 50px;
+  left: 28px;
+
+  width: 107px;
+  height: 65px;
+
+  background-image: url(../img/fitness.svg);
+}
+
+.smart-watch a::before {
+  top: 32px;
+  left: 55px;
+
+  width: 56px;
+  height: 98px;
+
+  background-image: url(../img/smart-watch.svg);
+}
+
+.drone a::before {
+  top: 49px;
+  left: 13px;
+
+  width: 132px;
+  height: 69px;
+
+  background-image: url(../img/drone.svg);
+}
+
+.types-of-devices-list a:hover,
+.types-of-devices-list a:focus {
+  background-image: linear-gradient(to bottom, #f0c52e 160px, transparent 160px);
+}
+
+.types-of-devices-list a:active {
+  color: rgba(0, 0, 0, 0.3);
+  background-image: linear-gradient(to bottom, #f0c52e 160px, transparent 160px);
+}
+
+.types-of-devices-list a:active::before {
+  opacity: 0.3;
 }
 
 /* Секция Производители (брэнды) */
@@ -1767,3 +1871,52 @@ input[type="text"].visually-hidden {
 .modal-map img {
   display: block;
 }
+
+
+/* body > * {
+
+}
+
+body > * > * {
+
+}
+
+body > * > * > * {
+
+}
+
+body > * > * > * > * {
+  background: rgba(0, 255, 255, 0.5);
+}
+
+body > * > * > * > * > * {
+  background: rgba(255, 255, 0, 0.5);
+}
+
+body > * > * > * > * > * > * {
+  background: rgba(255, 0, 0, 0.5);
+}
+
+body > * > * > * > * > * > * > * {
+  background: rgba(0, 255, 0, 0.5);
+}
+
+body > * > * > * > * > * > * > * > * {
+  background: rgba(0, 0, 255, 0.5);
+}
+
+body > * > * > * > * > * > * > * > * > * {
+
+}
+
+body > * > * > * > * > * > * > * > * > * > * {
+
+}
+
+body > * > * > * > * > * > * > * > * > * > * > * {
+
+}
+
+body > * > * > * > * > * > * > * > * > * > * > * > * {
+
+} */
