--- a/css/style.css
+++ b/css/style.css
@@ -151,9 +151,41 @@ input[type="text"].visually-hidden {
 
 .site-header {
   margin-top: 40px;
-  margin-bottom: 0;
 
   color: #000000;
+}
+
+.layout-header {
+  position: relative;
+
+  padding-top: 34px;
+  padding-right: 60px;
+  padding-bottom: 50px;
+  padding-left: 59px;
+
+  background-color: #f7e296;
+}
+
+.index-page .site-header {
+  margin-bottom: 2px;
+}
+
+.inner-page .site-header {
+  margin-bottom: 37px;
+}
+
+.index-page .layout-header::after {
+  content: "";
+
+  position: absolute;
+  z-index: -100;
+  bottom: -113px;
+  left: 0;
+
+  width: 1160px;
+  height: 113px;
+
+  background-color: #f7e296;
 }
 
 .site-header a {
@@ -172,34 +204,6 @@ input[type="text"].visually-hidden {
   opacity: 0.3;
 }
 
-.inner-page .site-header {
-  margin-bottom: 37px;
-}
-
-.layout-header {
-  position: relative;
-
-  padding-top: 34px;
-  padding-right: 60px;
-  padding-bottom: 50px;
-  padding-left: 59px;
-
-  background-color: #f7e296;
-}
-
-.index-page .layout-header::after {
-  content: "";
-
-  position: absolute;
-  z-index: -10;
-  bottom: -113px;
-  left: 0;
-
-  width: 1160px;
-  height: 113px;
-
-  background-color: #f7e296;
-}
 
 .site-header-logo {
   position: absolute;
@@ -542,9 +546,245 @@ input[type="text"].visually-hidden {
 
 .layout-index-columns .left-column,
 .layout-index-columns .right-column {
-  display: flex;
+  box-sizing: border-box;
   width: 560px;
 }
+
+/* Секция популярные девайсы (слайдер) */
+
+.popular-products {
+  position: relative;
+
+  margin-bottom: 106px;
+}
+
+.popular-products-slider-controls {
+  position: absolute;
+  top: 320px;
+  right: 83px;
+}
+
+.popular-products-slider-controls button {
+  position: relative;
+
+  width: 12px;
+  height: 12px;
+  margin: 0;
+  padding: 0;
+
+  overflow: hidden;
+  text-indent: -1000px;
+
+  background-color: transparent;
+  border: none;
+}
+
+.popular-products-slider-controls button:not(:last-child) {
+  margin-right: 17px;
+}
+
+.popular-products-slider-controls button::before {
+  content: "";
+
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  width: 10px;
+  height: 10px;
+
+  border: 1px solid #000000;
+  border-radius: 50%;
+}
+
+.popular-products-slider-controls .current-slide-button::after {
+  content: "";
+
+  position: absolute;
+  top: 4px;
+  right: 4px;
+
+  width: 2px;
+  height: 2px;
+
+  border: 1px solid #000000;
+  border-radius: 50%;
+}
+
+.popular-products-slider-list {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.popular-products-slide {
+  display: none;
+}
+
+.popular-products-current-slide {
+  display: block;
+}
+
+.slider-product-image img {
+  display: block;
+}
+
+.slider-product-description {
+  position: relative;
+  z-index: 0;
+}
+
+.slider-product-description::before {
+  content: "";
+
+  position: absolute;
+  top: 37px;
+  left: 0;
+
+  width: 100px;
+  height: 7px;
+
+  background-color: #ffffff;
+}
+
+.slider-product-description::after {
+  position: absolute;
+  z-index: -10;
+  top: -14px;
+  right: 46px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 179px;
+  line-height: 179px;
+  letter-spacing: 1.79px;
+  font-weight: 800;
+  text-align: right;
+  color: #ffffff;
+}
+
+.popular-products-slide:nth-child(1) .slider-product-description::after {
+  content: "01";
+}
+
+.popular-products-slide:nth-child(2) .slider-product-description::after {
+  content: "02";
+}
+
+.popular-products-slide:nth-child(3) .slider-product-description::after {
+  content: "03";
+}
+
+.slider-product-description .slogan {
+  margin: 0;
+  margin-top: 79px;
+  margin-bottom: 19px;
+  padding: 0;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 47px;
+  line-height: 56px;
+  letter-spacing: 0.47px;
+  font-weight: 800;
+  color: #000000;
+}
+
+.slider-product-description .details {
+  margin: 0;
+  margin-bottom: 43px;
+  padding: 0;
+
+  font-family: "Open Sans", Arial, sans-serif;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 0.15px;
+  font-weight: 300;
+  color: #464646;
+}
+
+.slider-product-description .button {
+  width: 220px;
+  margin-bottom: 49px;
+}
+
+.product-description-table {
+  display: flex;
+  flex-direction: column;
+  border-collapse: collapse;
+}
+
+.product-description-table thead {
+  order: 2;
+}
+
+.product-description-table tbody {
+  order: 1;
+}
+
+.product-description-table th,
+.product-description-table td {
+  padding: 0;
+}
+
+.product-description-table th {
+  padding-top: 8px;
+
+  font-family: "Open Sans", Arial, sans-serif;
+  font-size: 13px;
+  line-height: 20px;
+  letter-spacing: 0.13px;
+  font-weight: 300;
+  color: #464646;
+}
+
+.product-description-table td {
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 36px;
+  line-height: 48px;
+  letter-spacing: 0.36px;
+  font-weight: 300;
+  color: #000000;
+}
+
+.slide-selfie .slider-product-image {
+  padding-left: 90px;
+}
+
+.slide-selfie .slider-product-description .details {
+  width: 485px;
+}
+
+.slide-selfie .product-description-table th:nth-child(1),
+.slide-selfie .product-description-table td:nth-child(1) {
+  width: 159px;
+}
+
+.slide-selfie .product-description-table th:nth-child(2),
+.slide-selfie .product-description-table td:nth-child(2) {
+  width: 139px;
+}
+
+.slide-fitness .slider-product-image {
+  padding-left: 103px;
+}
+
+.slide-fitness .slider-product-description .slogan {
+  max-width: 350px;
+}
+
+.slide-fitness .slider-product-description .details {
+  width: 445px;
+}
+
+.slide-drone .slider-product-image {
+  padding-left: 60px;
+}
+
+.slide-drone .slider-product-description .details {
+  width: 455px;
+}
+
 
 /* Секция представленные виды девайсов */
 
@@ -704,6 +944,12 @@ input[type="text"].visually-hidden {
 }
 
 /* Секции "О нас" и "Контакты"*/
+
+/* Для выравнивания высоты контента колонок */
+.layout-index-columns-about-us-contacts .left-column,
+.layout-index-columns-about-us-contacts .right-column {
+  display: flex;
+}
 
 .about-us,
 .contacts {
@@ -1886,15 +2132,15 @@ body > * > * > * {
 }
 
 body > * > * > * > * {
-  background: rgba(0, 255, 255, 0.5);
+
 }
 
 body > * > * > * > * > * {
-  background: rgba(255, 255, 0, 0.5);
+
 }
 
 body > * > * > * > * > * > * {
-  background: rgba(255, 0, 0, 0.5);
+
 }
 
 body > * > * > * > * > * > * > * {
@@ -1906,15 +2152,15 @@ body > * > * > * > * > * > * > * > * {
 }
 
 body > * > * > * > * > * > * > * > * > * {
-
+  background: rgba(0, 255, 255, 0.5);
 }
 
 body > * > * > * > * > * > * > * > * > * > * {
-
+  background: rgba(255, 255, 0, 0.5);
 }
 
 body > * > * > * > * > * > * > * > * > * > * > * {
-
+  background: rgba(255, 0, 0, 0.5);
 }
 
 body > * > * > * > * > * > * > * > * > * > * > * > * {
