--- a/css/style.css
+++ b/css/style.css
@@ -611,7 +611,7 @@ input[type="text"].visually-hidden {
   border-radius: 50%;
 }
 
-.popular-products-slider-list {
+.popular-products-slide-list {
   margin: 0;
   padding: 0;
 
@@ -785,7 +785,6 @@ input[type="text"].visually-hidden {
   width: 455px;
 }
 
-
 /* Секция представленные виды девайсов */
 
 .types-of-devices {
@@ -896,6 +895,169 @@ input[type="text"].visually-hidden {
 
 .types-of-devices-list a:active::before {
   opacity: 0.3;
+}
+
+/* Секция преимущества (слайдер) */
+
+.features {
+  margin-bottom: 94px;
+
+  background-image: linear-gradient(to bottom, #ffffff 100px, #e5e5e5 100px, #e5e5e5 100%);
+}
+
+.features-container {
+  position: relative;
+
+  display: flex;
+}
+
+.features-container::before {
+  content: "";
+
+  position: absolute;
+  top: 0;
+  left: 277px;
+
+  width: 7px;
+  height: calc(100% - 69px);
+
+  background-color: #000000;
+}
+
+.features-slider-controls {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  min-width: 278px;
+  margin-right: 6px;
+  padding-top: 82px;
+}
+
+.features-slider-controls button {
+  width: 160px;
+}
+
+.features-slider-controls button:nth-child(1) {
+  margin-bottom: 23px;
+}
+
+.features-slider-controls button:nth-child(2) {
+  margin-bottom: 25px;
+}
+
+.features-slider-controls .button:active {
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  text-align: left;
+  color: #f7e184;
+
+  background-color: #000000;
+}
+
+.features-slider-controls .button:active::before {
+  opacity: 0;
+}
+
+.features-slider-controls .current-slide-button {
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  text-align: left;
+  color: #f7e184;
+
+  background-color: #000000;
+}
+
+.features-slider-controls .current-slide-button::before {
+  opacity: 0;
+}
+
+.features-slide-list {
+  flex-grow: 1;
+  margin: 0;
+  padding: 0;
+  padding-top: 27px;
+  padding-left: 117px;
+
+  list-style: none;
+}
+
+.features-slide-list li {
+  position:relative;
+
+  width: 100%;
+
+  display: none;
+}
+
+.features-slide-list .current-slide {
+  display: block;
+}
+
+.features-slide-list li::before {
+  content: "";
+
+  position: absolute;
+}
+
+.features-slide-list h3 {
+  margin-bottom: 31px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 47px;
+  line-height: 48px;
+  letter-spacing: 0.47px;
+  font-weight: 800;
+  color: #000000;
+}
+
+.features-slide-list p {
+  min-height: 221px;
+}
+
+.slide-delivery::before {
+  top: 12px;;
+  right: 66px;
+
+  width: 136px;
+  height: 164px;
+
+  background-image: url(../img/delivery.svg);
+}
+
+.slide-delivery p {
+  width: 450px;
+}
+
+.slide-warranty::before {
+  top: -13px;
+  right: 46px;
+
+  width: 171px;
+  height: 194px;
+
+  background-image: url(../img/warranty.svg);
+}
+
+.slide-warranty p {
+  width: 450px;
+}
+
+.slide-credit::before {
+  top: -13px;
+  right: 70px;
+
+  width: 156px;
+  height: 186px;
+
+  background-image: url(../img/credit.svg);
+}
+
+.slide-credit p {
+  width: 450px;
 }
 
 /* Секция Производители (брэнды) */
@@ -1504,6 +1666,7 @@ input[type="text"].visually-hidden {
   flex-wrap: wrap;
   margin: 0;
   margin-bottom: 35px;
+  margin-left: -40px;
   padding: 0;
 
   list-style: none;
@@ -1515,6 +1678,7 @@ input[type="text"].visually-hidden {
   align-content: flex-start;
   width: 360px;
   margin-top: 46px;
+  margin-left: 40px;
 }
 
 .new-product {
@@ -1663,10 +1827,6 @@ input[type="text"].visually-hidden {
   letter-spacing: 0.16px;
   font-weight: 300;
   color: #464646;
-}
-
-.product-card:nth-child(2n+1) {
-  margin-right: 40px;
 }
 
 .product-name {
@@ -1990,6 +2150,10 @@ input[type="text"].visually-hidden {
 /* Модальные окна */
 
 .modal {
+  display: none;
+}
+
+.modal {
   position: relative;
 
   box-sizing: border-box;
@@ -2117,52 +2281,3 @@ input[type="text"].visually-hidden {
 .modal-map img {
   display: block;
 }
-
-
-/* body > * {
-
-}
-
-body > * > * {
-
-}
-
-body > * > * > * {
-
-}
-
-body > * > * > * > * {
-
-}
-
-body > * > * > * > * > * {
-
-}
-
-body > * > * > * > * > * > * {
-
-}
-
-body > * > * > * > * > * > * > * {
-  background: rgba(0, 255, 0, 0.5);
-}
-
-body > * > * > * > * > * > * > * > * {
-  background: rgba(0, 0, 255, 0.5);
-}
-
-body > * > * > * > * > * > * > * > * > * {
-  background: rgba(0, 255, 255, 0.5);
-}
-
-body > * > * > * > * > * > * > * > * > * > * {
-  background: rgba(255, 255, 0, 0.5);
-}
-
-body > * > * > * > * > * > * > * > * > * > * > * {
-  background: rgba(255, 0, 0, 0.5);
-}
-
-body > * > * > * > * > * > * > * > * > * > * > * > * {
-
-} */
